--- a/Tests_for_students/Create-EditTest.xaml
+++ b/Tests_for_students/Create-EditTest.xaml
@@ -18,7 +18,7 @@
 
         <ScrollViewer x:Name="C_Left" Background="#eee" Grid.Row="0" Grid.RowSpan="2">
             <StackPanel>
-                <TextBox x:Name="C_TestName" Text="Название теста" 
+                <Button x:Name="C_TestName" Click="SetTest_Click" Content="Название теста" 
                      Background="#eee" FontSize="16"/>
 
                 <StackPanel x:Name="C_QList" Orientation="Vertical"/>
