--- a/Tests_for_students/Student.xaml
+++ b/Tests_for_students/Student.xaml
@@ -6,18 +6,18 @@
         xmlns:local="clr-namespace:Tests_for_students"
         mc:Ignorable="d"
         Title="Teon : student" Height="331.915" Width="410.106">
-    <WrapPanel Orientation="Vertical" x:Name="Main" Margin="20" HorizontalAlignment="Center">
-        <WrapPanel x:Name="firstPanel" Orientation="Vertical">
-            <TextBlock FontSize="20" Margin="0, 0, 20, 0" HorizontalAlignment="Center">Имя Фамилие</TextBlock>
-            <TextBox Width="300" x:Name="C_UserName" FontSize="18"></TextBox>
-            <WrapPanel Margin="0, 10" Orientation="Vertical" HorizontalAlignment="Center">
-                <Button FontSize="18" Margin="0,10" Click="openTest_Click">Открыть тест</Button>
+    <StackPanel Orientation="Vertical" x:Name="Main" Margin="20" HorizontalAlignment="Center">
+        <StackPanel x:Name="firstPanel" Orientation="Vertical">
+                <TextBlock FontSize="20" Margin="0, 0, 20, 0" HorizontalAlignment="Center">Имя Фамилие</TextBlock>
+                <TextBox Width="300" x:Name="C_UserName" FontSize="18"></TextBox>
+                <Button FontSize="18" Width="170" Margin="0,10" Click="openTest_Click">Открыть тест</Button>
                 <StackPanel>
-                    <Button FontSize="18" Click="StartTest_Click">Начать тестирование</Button>
-                    <TextBlock x:Name="C_testName" HorizontalAlignment="Center" FontSize="18" Margin="10"/>
-                    <TextBlock x:Name="C_testDesk" HorizontalAlignment="Center" FontSize="16" Margin="10"/>
+                    <Button FontSize="18" Width="230" Click="StartTest_Click">Начать тестирование</Button>
+                    <TextBlock x:Name="C_testName" HorizontalAlignment="Left" 
+                               FontSize="18" Margin="10"/>
+                    <TextBlock x:Name="C_testDesk" HorizontalAlignment="Center" 
+                               FontSize="16" Margin="10" TextWrapping="Wrap"/>
                 </StackPanel>
-            </WrapPanel>
-        </WrapPanel>
-    </WrapPanel>
+        </StackPanel>
+    </StackPanel>
 </Window>
