--- a/Tests_for_students/Create-EditTest.xaml
+++ b/Tests_for_students/Create-EditTest.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         WindowState="Maximized" 
         Title="Create_EditTest" Height="450" Width="800">
+    
     <Grid x:Name="Root">
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -31,8 +32,52 @@
         </ScrollViewer>
         
         <ScrollViewer Grid.Row="0" Grid.Column="1">
-            <StackPanel x:Name="C_Right" 
-                    Orientation="Vertical" >
+            <StackPanel Orientation="Vertical">
+                <StackPanel x:Name="C_TestOption" Orientation="Vertical" 
+                        Visibility="Collapsed">
+                    <Label Content="Название теста" FontSize="16"/>
+                    <TextBox x:Name="C_OptName" FontSize="16"/>
+
+                    <Label Content="Автор" FontSize="16"/>
+                    <TextBox x:Name="C_OptAuthor" FontSize="16"/>
+
+                    <Label Content="Описание" FontSize="16"/>
+                    <TextBox x:Name="C_OptDesk" FontSize="16"
+                         TextWrapping="Wrap" AcceptsReturn="True"/>
+
+                    <StackPanel>
+                        <StackPanel.ToolTip>
+                            <ToolTip>
+                                Обязательно нужен, чтобы ограничить доступ к изменения теста другими людьми!
+                            </ToolTip>
+                        </StackPanel.ToolTip>
+                        <Label Content="Пароль" FontSize="16"/>
+                        <PasswordBox x:Name="C_Pass" FontSize="16"/>
+                    </StackPanel>
+
+                    <Button Content="Сохранить" Width="100" 
+                        HorizontalAlignment="Left" Margin="20, 10"
+                        Click="SaveTestInfo_Click"/>
+                </StackPanel>
+
+                <StackPanel x:Name="C_QuestField" Orientation="Vertical" 
+                        Visibility="Collapsed"  Margin="10">
+                    <TextBox x:Name="C_Quest" FontSize="16" ToolTip="Вопрос"
+                             TextWrapping="Wrap" AcceptsReturn="True"/>
+                    <StackPanel x:Name="C_Answers"/>
+                    <Button Content="Добавить варинт ответа" Click="AddAnswer"
+                            FontSize="16" HorizontalAlignment="Left"
+                            Padding="10, 0" Margin="0, 10, 0, 0"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="Сохранить" Padding="10, 0" 
+                                FontSize="16" Margin="0, 10" 
+                                Click="SaveQuest"/>
+                        <Button Content="Удалить" Margin="20, 10" 
+                                FontSize="16" Padding="10, 0" 
+                                ToolTip="Безвозвратно удалить текущий вопос"
+                                Click="delQuest_Click"/>
+                    </StackPanel>
+                </StackPanel>
             </StackPanel>
         </ScrollViewer>
     </Grid>
